@startuml class_governance
title Classes — Project Governance

top to bottom direction

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 65
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam enum {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              15
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1.4
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   12
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        11
hide circle
hide empty methods

class Project {
  - code : String
  - name : String
}

enum RiskLevel {
  LOW
  MEDIUM
  HIGH
}

class Risk {
  - description : String
  - probability : RiskLevel
  - impact : RiskLevel
  - status : RiskStatus
  - mitigationPlan : String
}

enum RiskStatus {
  OPEN
  MITIGATED
  CLOSED
}

class Deliverable {
  - title : String
  - dueDate : LocalDate
  - status : DeliverableStatus
}

enum DeliverableStatus {
  PENDING
  IN_PROGRESS
  DELIVERED
  VALIDATED
}

class ChangeRequest {
  - title : String
  - priority : ChangePriority
  - status : ChangeStatus
  - requestDate : LocalDate
  - decisionDate : LocalDate
}

enum ChangePriority {
  LOW
  NORMAL
  HIGH
  CRITICAL
}

enum ChangeStatus {
  PENDING
  APPROVED
  REJECTED
}

class Stakeholder {
  - name : String
  - role : String
  - influence : RiskLevel
}

Project "1" *-- "*" Risk
Project "1" *-- "*" Deliverable
Project "1" *-- "*" ChangeRequest
Project "1" *-- "*" Stakeholder
Risk ..> RiskLevel : probability, impact
Risk ..> RiskStatus
Deliverable ..> DeliverableStatus
ChangeRequest ..> ChangePriority
ChangeRequest ..> ChangeStatus
Stakeholder ..> RiskLevel

note right of Deliverable
  EVM Delivery % = delivered/validated deliverables ÷ planned deliverables × 100.
end note

@enduml
